2.8 «Конфигурация приложений»/manifests/2_ex/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: nginx-https
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
